--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -78,7 +78,7 @@
               <li>STK sử dụng giao dịch: </li>
               <li>  12456789 – Vietcombank – TEST</li>
               <li>  123456789 – Techcombank – TEST</li>
-
+              <li><a [routerLink]="['/lich-su-mua-hang']">Kiểm tra đơn hàng</a></li>
  
               <!-- <li class="social-network fb"><a title="Connect us on Facebook" target="_blank" href="https://www.facebook.com/dangminhpc70"><i class="fa fa-facebook"></i></a></li> -->
               <!-- <li class="social-network googleplus"><a title="Connect us on Google+" target="_blank" href="https://plus.google.com"><i class="fa fa-google"></i></a></li>
@@ -120,6 +120,8 @@
                 <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 2}">Sản phẩm bán chạy</a></li>
                 <li><a  [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Sản phẩm giảm giá</a></li>
                 <li><a href="#">Hàng cũ - giá tốt</a></li>
+
+               
               </ul>
             </div>
           </div>
@@ -130,7 +132,7 @@
             <div class="tabBlock" id="TabBlock-5">
               <div class="footer-description">ĐĂNG MINH COMPUTER.</div>
               <div class="footer-description">
-                <p>Chuyên kinh doanh các loại PC - LPTOP - LCD - GAMING- CAMERA - MÁY TÍNH VĂN PHÒNG</p>
+                <p>Chuyên kinh doanh các loại PC - LAPTOP - LCD - GAMING- CAMERA - MÁY TÍNH VĂN PHÒNG</p>
                 <b>Địa chỉ:</b>  29/16 Đường CMT8 - Phường 3 - TP. Tây Ninh.<br>
               </div>
               <div class="payment">
